--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -27,5 +27,7 @@
   "role": "Role type",
   "q3-api-users": "UserModel",
   "q3-api-permissions": "PermissionModel",
-  "forgotPassword": "Forgot your password?"
+  "forgotPassword": "Forgot your password?",
+  "ok": "OK, thanks",
+  "learn": "Learn more"
 }
