--- a/packages/q3-ui/locale/en/descriptions.json
+++ b/packages/q3-ui/locale/en/descriptions.json
@@ -11,5 +11,6 @@
   "error": "The server responded unexpectedly. Please refresh and report a bug if this issue persists",
   "inclusions": "Move items from this column into the next to activate them. Remember, you can search and select in bulk. Likewise, you can set RegExp rules to future-proof your selection.",
   "exceptions": "Items in this column are active either by precise selection or RegExp. To remove an automated item (one by rule), please delete the RegExp first or rewrite it to further exclude options.",
-  "spam": "Hang tight. Checking the browser for spam before serving this form."
+  "spam": "Hang tight. Checking the browser for spam before serving this form.",
+  "cookies": "This website uses cookies"
 }
