--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -11,5 +11,6 @@
   "error": "Something went wrong",
   "back": "Go back",
   "fetchingError": "Could not fetch data for ",
-  "demo": "Demonstration"
+  "demo": "Demonstration",
+  "message": "Send us a message"
 }
