Fixes to wizard, list and images

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -31,5 +31,9 @@
   "ok": "OK, thanks",
   "learn": "Learn more",
   "tel": "Phone phone",
-  "message": "Provide some details"
+  "message": "Provide some details",
+  "country": "Country",
+  "openEditor": "Launch editor",
+  "dropNdrop": "Drag files into this panel or click to upload individually.",
+  "upload": "Upload"
 }
