--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -35,5 +35,6 @@
   "country": "Country",
   "openEditor": "Launch editor",
   "dropNdrop": "Drag files into this panel or click to upload individually.",
-  "upload": "Upload"
+  "upload": "Upload",
+  "featuredUpload": "Featured upload"
 }
