--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -49,5 +49,7 @@
   "condition": "Condition",
   "ownership": "Ownership",
   "fields": "Fields",
-  "ownershipAliases": "Ownership aliases"
+  "ownershipAliases": "Ownership aliases",
+  "unknownAccount": "Hmm, not what we were expecting...",
+  "sentLabel": "Nice! Head to the login screen now."
 }
