--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -17,5 +17,6 @@
   "noNotes": "Start the conversation",
   "onTheMind": "What's on your mind?",
   "passwordReset": "Password reset",
-  "newPermission": "New permission grant"
+  "newPermission": "New permission grant",
+  "cart": "Shopping cart"
 }
