Removed open state from wizard and moved editors into list

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -58,5 +58,6 @@
   "city": "City",
   "streetLine1": "Street line 1",
   "streetLine2": "Street line 2",
-  "postal": "Postal"
+  "postal": "Postal",
+  "edit": "View/edit"
 }
