--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -59,5 +59,7 @@
   "streetLine1": "Street line 1",
   "streetLine2": "Street line 2",
   "postal": "Postal",
-  "edit": "View/edit"
+  "edit": "View/edit",
+  "branch": "Company branch",
+  "primary": "Primary address?"
 }
