--- a/packages/q3-ui/locale/en/helpers.json
+++ b/packages/q3-ui/locale/en/helpers.json
@@ -16,5 +16,6 @@
   "postal": "No spaces allowed",
   "moreThan1": "Cannot be negative or null",
   "quantity": "Specify an amount or use the toggles",
-  "multi": "This is a multi-text field. Press enter to add options."
+  "multi": "This is a multi-text field. Press enter to add options.",
+  "lorem": "This is a popover! Use it to display additional non-critical information."
 }
