fix: spread operator results passed into the dialog (Closes #61)

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -66,5 +66,6 @@
   "addToCart": "Add to cart",
   "search": "Search results",
   "filter": "Filter search",
-  "subscribed": "Subscribed"
+  "subscribed": "Subscribed",
+  "confirm": "Confirm"
 }
