--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -23,5 +23,6 @@
   "danger": "Danger zone",
   "filter": "Filter data",
   "addNote": "Add new note",
-  "lorem": "Lorem ipsum"
+  "lorem": "Lorem ipsum",
+  "general": "General"
 }
