fix: new table renderer (Closes #72)

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -67,5 +67,6 @@
   "search": "Search results",
   "filter": "Filter search",
   "subscribed": "Subscribed",
-  "confirm": "Confirm"
+  "confirm": "Confirm",
+  "showingResults": "{{total}} results"
 }
