--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -24,5 +24,6 @@
   "filter": "Filter data",
   "addNote": "Add new note",
   "lorem": "Lorem ipsum",
-  "general": "General"
+  "general": "General",
+  "needHelp": "Need help?"
 }
