fix: override in select component (Closes #76)

--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -25,5 +25,6 @@
   "addNote": "Add new note",
   "lorem": "Lorem ipsum",
   "general": "General",
-  "needHelp": "Need help?"
+  "needHelp": "Need help?",
+  "documentation": "Documentation"
 }
