fix: file upload and transfer state (Closes #71 and Closes #73)

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -71,5 +71,6 @@
   "showingResults": "{{total}} results",
   "preview": "Preview upload thumbnail",
   "upload": "Select above to select a file",
-  "needHelp": "Learn about the actions on this page"
+  "needHelp": "Learn about the actions on this page",
+  "fileInput": "Upload {{name}}"
 }
