test: FormBuilder unit tests and Next/Back PropTypes defs

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -21,7 +21,7 @@
   "clear": "Clear input",
   "enlarge": "Click to enlarge",
   "searchPlaceholder": "Press Enter to search",
-  "submit": "Send",
+  "submit": "Submit",
   "coll": "Collection",
   "op": "Action",
   "role": "Role type",
