feat: localStorage int and q3-admin container refactoring

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -135,5 +135,9 @@
   "PE": "Prince Edward Island",
   "QC": "Quebec",
   "SK": "Saskatchewan",
-  "YT": "Yukon"
+  "YT": "Yukon",
+  "apply": "Apply",
+  "applyAndSave": "Apply/save",
+  "reset": "Reset",
+  "resetAndSave": "Reset/save"
 }
