test: corrected default onClick behaviour for datatable sorting

--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -26,5 +26,6 @@
   "lorem": "Lorem ipsum",
   "general": "General",
   "needHelp": "Need help?",
-  "documentation": "Documentation"
+  "documentation": "Documentation",
+  "narrowSearch": "Filter"
 }
