--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -139,5 +139,6 @@
   "apply": "Apply",
   "applyAndSave": "Apply/save",
   "reset": "Reset",
-  "resetAndSave": "Reset/save"
+  "resetAndSave": "Reset/save",
+  "adventure": "Adventure {{type}}"
 }
