fix: improved phone number validation

--- a/packages/q3-ui/locale/en/helpers.json
+++ b/packages/q3-ui/locale/en/helpers.json
@@ -17,5 +17,7 @@
   "moreThan1": "Cannot be negative or null",
   "quantity": "Specify an amount or use the toggles",
   "multi": "This is a multi-text field. Press enter to add options.",
-  "lorem": "This is a popover! Use it to display additional non-critical information."
+  "lorem": "This is a popover! Use it to display additional non-critical information.",
+  "tel": "Supports country code (+1) and extensions (x123)",
+  "phone": "Supports country code (+1) and extensions (x123)"
 }
