--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -30,7 +30,7 @@
   "forgotPassword": "Forgot your password?",
   "ok": "OK, thanks",
   "learn": "Learn more",
-  "tel": "Phone phone",
+  "tel": "Phone",
   "message": "Provide some details",
   "country": "Country",
   "openEditor": "Launch editor",
