refactor: collapsed filter view into menu

--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -140,5 +140,6 @@
   "applyAndSave": "Apply/save",
   "reset": "Reset",
   "resetAndSave": "Reset/save",
-  "adventure": "Adventure {{type}}"
+  "adventure": "Adventure {{type}}",
+  "backToMenu": "Back to full menu"
 }
