feat: notes thread

--- a/packages/q3-ui/locale/en/titles.json
+++ b/packages/q3-ui/locale/en/titles.json
@@ -27,5 +27,6 @@
   "general": "General",
   "needHelp": "Need help?",
   "documentation": "Documentation",
-  "narrowSearch": "Filter"
+  "narrowSearch": "Filter",
+  "help": "Documentation"
 }
