--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -146,5 +146,10 @@
   "startTyping": "Start typing to search",
   "browseOrClick": "Click a result at any time from the auto-populated list to visit the page.",
   "changesRestored": "Un-saved changes have been restored into this form. Please save or delete them to proceed.",
-  "unsavedChangesOn": "Un-saved changes detected on form #{{id}}"
+  "unsavedChangesOn": "Un-saved changes detected on form #{{id}}",
+  "creator": "Created by",
+  "lastUpdated": "Last updated",
+  "help": "Documentation",
+  "documentationError": "Could not load the documentation.",
+  "documentationEmpty": "Documentation not yet configured."
 }
