--- a/packages/q3-ui/locale/en/labels.json
+++ b/packages/q3-ui/locale/en/labels.json
@@ -146,7 +146,7 @@
   "startTyping": "Start typing to search",
   "browseOrClick": "Click a result at any time from the auto-populated list to visit the page.",
   "changesRestored": "Un-saved changes have been restored into this form. Please save or delete them to proceed.",
-  "unsavedChangesOn": "Un-saved changes on #{{id}}. Please return to form to save them or discard.",
+  "unsavedChangesOn": "Un-saved changes detected! Please save them or discard. (Form {{id}})",
   "creator": "Created by",
   "lastUpdated": "Last updated",
   "help": "Documentation",
