fix(j3-145): change to useLoading message reporting

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -55,6 +55,8 @@ import { countries } from '../src/fields/__fixtures__/options';
           positive
           helper="Between 1 and 10"
         />
+        <Field name="date" type="date" />
+        <Field name="dateRange" type="dateRange" />
         <Field
           name="dynamic"
           label="Dynamic (via override)"
