--- a/packages/q3-ui-datatables/stories/Features.stories.mdx
+++ b/packages/q3-ui-datatables/stories/Features.stories.mdx
@@ -18,12 +18,12 @@ import {
 import orders from '../__fixtures__/orders.json';
 import TableView from '../src';
 
-<Meta title="Datatables|Preview" component={TableView} />
+<Meta title="Datatables|Table" component={TableView} />
 
 # Table
 
 <Preview>
-  <Story name="Types">
+  <Story name="Populated">
     <LocationProvider initialPath="/">
       <Box p={4} style={{ backgroundColor: '#F5F7F9' }}>
         <TableView
