fix(gom-579): extend validation schema builder to array fields

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -110,6 +110,12 @@ minimum values, maximum values, and required values.
         helper="Must be future-looking"
       />
       <Field
+        name="multitext"
+        type="multitext"
+        of="email"
+        helper="Each input must be an email"
+      />
+      <Field
         name="number"
         type="number"
         min="1"
