chore(gom-578): support for freeSolo mode in autocomplete

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -44,6 +44,12 @@ import { countries } from '../src/fields/__fixtures__/options';
             options={countries}
           />
           <Field
+            name="freeSolo"
+            type="autocomplete"
+            options={countries}
+            freeSolo
+          />
+          <Field
             name="chips"
             type="chips"
             options={countries}
