fix: state comparison to included overrideable properties

--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -75,6 +75,12 @@ import { countries } from '../src/fields/__fixtures__/options';
           />
           <Field name="date" type="date" />
           <Field name="dateRange" type="dateRange" />
+          <Field name="checkbox" type="checkbox" />
+          <Field
+            name="switch"
+            type="checkbox"
+            variant="switch"
+          />
           <Field
             name="dynamic"
             label="Dynamic (via override)"
