chore: wip mobile layout

--- a/packages/q3-admin/__fixtures__/App.stories.mdx
+++ b/packages/q3-admin/__fixtures__/App.stories.mdx
@@ -6,18 +6,18 @@ import {
 } from '@storybook/addon-docs/blocks';
 import App from './App';
 
-<Meta title="Admin|Demo" component={App} />
+<Meta title="_Q3|Demo" component={App} />
 
-# AppViewHeader
+# Q3
 
 <Preview>
-  <Story name="List View">
+  <Story name="List">
     <App initialPath="/shows" />
   </Story>
 </Preview>
 
 <Preview>
-  <Story name="Detail View">
+  <Story name="Detail">
     <App initialPath="/shows/1" />
   </Story>
 </Preview>
