chore: integrate with tree view for nested navigation

--- a/packages/q3-admin/src/components/Navigation/Navigation.stories.mdx
+++ b/packages/q3-admin/src/components/Navigation/Navigation.stories.mdx
@@ -21,7 +21,7 @@ import logo from '../../__fixtures__/logo';
 
 <Preview>
   <Story name="With deeply nested pages">
-    <Location initialPath="/">
+    <Location initialPath="/savings">
       <Viewport>
         <Navigation
           logoSrc={logo}
