chore(gom-581): Notifications module integration with q3-admin sockets

--- a/packages/q3-ui-forms/src/fields/Autocomplete/Autocomplete.stories.mdx
+++ b/packages/q3-ui-forms/src/fields/Autocomplete/Autocomplete.stories.mdx
@@ -12,7 +12,7 @@ import {
 import { Form, Field } from '../../builders';
 
 <Meta
-  title="Forms|Fields types/Autocomplete"
+  title="Forms|Fields/Autocomplete"
   component={Autocomplete}
 />
 
