chore: removing chart implementation in favour of a more abstracted data layer

--- a/packages/q3-ui-notifications/stories/Notifications.stories.mdx
+++ b/packages/q3-ui-notifications/stories/Notifications.stories.mdx
@@ -6,7 +6,7 @@ import {
 } from '@storybook/addon-docs/blocks';
 import { action } from '@storybook/addon-actions';
 import { withA11y } from '@storybook/addon-a11y';
-import Notifications from '../../src/Notifications';
+import Notifications from '../src/Notifications';
 import data from './fixture';
 
 <Meta
