chore: checkbox and page customization

--- a/packages/q3-admin/src/containers/Chart/Chart.stories.mdx
+++ b/packages/q3-admin/src/containers/Chart/Chart.stories.mdx
@@ -31,7 +31,7 @@ import ChartFixture from './Chart.fixture';
         title="Example bar graph"
         chartComponent={<p>Chart component of prefence</p>}
         filterComponent={<p>Filter inputs</p>}
-        initialQueryValue="?s=foo"
+        initialQueryValue="?s=foo&createdAt<=2012-01-12&createdAt>=2012-09-12"
       />
     </ChartFixture>
   </Story>
