--- a/packages/q3-ui-forms/stories/Fields.stories.mdx
+++ b/packages/q3-ui-forms/stories/Fields.stories.mdx
@@ -76,6 +76,8 @@ import { countries } from '../src/fields/__fixtures__/options';
           <Field name="date" type="date" />
           <Field name="dateRange" type="dateRange" />
           <Field name="checkbox" type="checkbox" />
+          <Field name="checkbox" type="checkbox" />
+          <Field name="checkbox" type="checkbox" />
           <Field
             name="switch"
             type="checkbox"
