chore: misc fixes and changes

--- a/packages/q3-admin/src/components/Navigation/Navigation.stories.mdx
+++ b/packages/q3-admin/src/components/Navigation/Navigation.stories.mdx
@@ -26,6 +26,7 @@ import logo from '../../__fixtures__/logo';
         <Navigation
           logoSrc={logo}
           menuItems={extendedMenuItems}
+          footerComponent={<small>Fine print</small>}
         />
       </Viewport>
     </Location>
